html en servidor node

--- a/intro-html/index.html
+++ b/intro-html/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Document</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="servidor.js">
 </head>
 <body>
     <header id="titulo">
